--- a/engine/test/qlci18n/CMakeLists.txt
+++ b/engine/test/qlci18n/CMakeLists.txt
@@ -1,22 +1,36 @@
 include(../../../variables.cmake)
 include(../../../coverage.cmake)
 
-add_executable(qlci18n_test WIN32
-    qlci18n_test.cpp qlci18n_test.h
+set(module_name "qlci18n_test")
+
+set(TS_FILES
+    qlci18n_fi_FI.ts
 )
-target_include_directories(qlci18n_test PRIVATE
+
+if(QT_VERSION_MAJOR GREATER 5)
+    qt_add_translation(QM_FILES ${TS_FILES})
+else()
+    qt5_add_translation(QM_FILES ${TS_FILES})
+endif()
+
+add_executable(${module_name} WIN32
+    ${module_name}.cpp ${module_name}.h
+    ${QM_FILES}
+)
+
+target_include_directories(${module_name} PRIVATE
     ../../../plugins/interfaces
     ../../src
 )
 
-target_link_libraries(qlci18n_test PRIVATE
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Test
     qlcplusengine
 )
 
-install(TARGETS qlci18n_test
+install(TARGETS ${module_name}
     BUNDLE DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
