--- a/plugins/midi/src/win32/CMakeLists.txt
+++ b/plugins/midi/src/win32/CMakeLists.txt
@@ -1,7 +1,31 @@
 include(../../../../variables.cmake)
 
-add_library(midiplugin)
-target_sources(midiplugin PRIVATE
+set(module_name "midiplugin")
+
+set(TS_FILES
+    ../MIDI_de_DE.ts
+    ../MIDI_es_ES.ts
+    ../MIDI_fi_FI.ts
+    ../MIDI_fr_FR.ts
+    ../MIDI_it_IT.ts
+    ../MIDI_nl_NL.ts
+    ../MIDI_cz_CZ.ts
+    ../MIDI_pt_BR.ts
+    ../MIDI_ca_ES.ts
+    ../MIDI_ja_JP.ts
+)
+
+if(QT_VERSION_MAJOR GREATER 5)
+    qt_add_translation(QM_FILES ${TS_FILES})
+else()
+    qt5_add_translation(QM_FILES ${TS_FILES})
+endif()
+
+add_library(${module_name}
+    ${QM_FILES}
+)
+
+target_sources(${module_name} PRIVATE
     ../../../../engine/src/qlcfile.cpp ../../../../engine/src/qlcfile.h
     ../../../interfaces/qlcioplugin.cpp ../../../interfaces/qlcioplugin.h
     ../common/configuremidiplugin.cpp ../common/configuremidiplugin.h ../common/configuremidiplugin.ui
@@ -9,7 +33,7 @@ target_sources(midiplugin PRIVATE
     ../common/midienumerator.h
     ../common/midiinputdevice.cpp ../common/midiinputdevice.h
     ../common/midioutputdevice.cpp ../common/midioutputdevice.h
-    ../common/midiplugin.cpp ../common/midiplugin.h
+    ../common/${module_name}.cpp ../common/${module_name}.h
     ../common/midiprotocol.cpp ../common/midiprotocol.h
     ../common/miditemplate.cpp ../common/miditemplate.h
     win32midienumerator.cpp
@@ -17,20 +41,20 @@ target_sources(midiplugin PRIVATE
     win32midiinputdevice.cpp win32midiinputdevice.h
     win32midioutputdevice.cpp win32midioutputdevice.h
 )
-target_include_directories(midiplugin PRIVATE
+target_include_directories(${module_name} PRIVATE
     ../../../../engine/src
     ../../../interfaces
     ../common ../common
 )
 
-target_link_libraries(midiplugin PRIVATE
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Widgets
     winmm
 )
 
-install(TARGETS midiplugin
+install(TARGETS ${module_name}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
