--- a/plugins/dummy/CMakeLists.txt
+++ b/plugins/dummy/CMakeLists.txt
@@ -1,7 +1,28 @@
 include(../../variables.cmake)
 
+set(module_name "dummy")
+
+set(TS_FILES
+    Dummy_de_DE.ts
+    Dummy_es_ES.ts
+    Dummy_fi_FI.ts
+    Dummy_fr_FR.ts
+    Dummy_it_IT.ts
+    Dummy_nl_NL.ts
+    Dummy_cz_CZ.ts
+    Dummy_pt_BR.ts
+    Dummy_ca_ES.ts
+    Dummy_ja_JP.ts
+)
+
+if(QT_VERSION_MAJOR GREATER 5)
+    qt_add_translation(QM_FILES ${TS_FILES})
+else()
+    qt5_add_translation(QM_FILES ${TS_FILES})
+endif()
+
 cmake_minimum_required(VERSION 3.16)
-project(dummy VERSION 1.0 LANGUAGES C CXX)
+project(${module_name} VERSION 1.0 LANGUAGES C CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -14,23 +35,26 @@ include(GNUInstallDirs)
 find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui Widgets)
 
-add_library(dummy)
-target_sources(dummy PRIVATE
+add_library(${module_name}
+    ${QM_FILES}
+)
+
+target_sources(${module_name} PRIVATE
     ../interfaces/qlcioplugin.cpp ../interfaces/qlcioplugin.h
     dummyconfiguration.cpp dummyconfiguration.h dummyconfiguration.ui
     dummyplugin.cpp dummyplugin.h
 )
-target_include_directories(dummy PRIVATE
+target_include_directories(${module_name} PRIVATE
     ../interfaces
 )
 
-target_link_libraries(dummy PRIVATE
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Widgets
 )
 
-install(TARGETS dummy
+install(TARGETS ${module_name}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
