--- a/plugins/gpio/CMakeLists.txt
+++ b/plugins/gpio/CMakeLists.txt
@@ -1,7 +1,28 @@
 include(../../variables.cmake)
 
+set(module_name "gpio")
+
+set(TS_FILES
+    GPIO_de_DE.ts
+    GPIO_es_ES.ts
+    GPIO_fi_FI.ts
+    GPIO_fr_FR.ts
+    GPIO_it_IT.ts
+    GPIO_nl_NL.ts
+    GPIO_cz_CZ.ts
+    GPIO_pt_BR.ts
+    GPIO_ca_ES.ts
+    GPIO_ja_JP.ts
+)
+
+if(QT_VERSION_MAJOR GREATER 5)
+    qt_add_translation(QM_FILES ${TS_FILES})
+else()
+    qt5_add_translation(QM_FILES ${TS_FILES})
+endif()
+
 cmake_minimum_required(VERSION 3.16)
-project(gpio VERSION 1.0 LANGUAGES C CXX)
+project(${module_name} VERSION 1.0 LANGUAGES C CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -14,24 +35,26 @@ include(GNUInstallDirs)
 find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui Widgets)
 
-add_library(gpio)
-target_sources(gpio PRIVATE
+add_library(${module_name}
+    ${QM_FILES}
+)
+target_sources(${module_name} PRIVATE
     ../interfaces/qlcioplugin.cpp ../interfaces/qlcioplugin.h
     gpioconfiguration.cpp gpioconfiguration.h gpioconfiguration.ui
     gpioplugin.cpp gpioplugin.h
     gpioreaderthread.cpp gpioreaderthread.h
 )
-target_include_directories(gpio PRIVATE
+target_include_directories(${module_name} PRIVATE
     ../interfaces
 )
 
-target_link_libraries(gpio PRIVATE
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Widgets
 )
 
-install(TARGETS gpio
+install(TARGETS ${module_name}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
