--- a/plugins/peperoni/unix/CMakeLists.txt
+++ b/plugins/peperoni/unix/CMakeLists.txt
@@ -1,17 +1,41 @@
 include(../../../variables.cmake)
 
-add_library(peperoni)
-target_sources(peperoni PRIVATE
+set(module_name "peperoni")
+
+set(TS_FILES
+    ../Peperoni_fi_FI.ts
+    ../Peperoni_de_DE.ts
+    ../Peperoni_es_ES.ts
+    ../Peperoni_fr_FR.ts
+    ../Peperoni_it_IT.ts
+    ../Peperoni_nl_NL.ts
+    ../Peperoni_cz_CZ.ts
+    ../Peperoni_pt_BR.ts
+    ../Peperoni_ca_ES.ts
+    ../Peperoni_ja_JP.ts
+)
+
+if(QT_VERSION_MAJOR GREATER 5)
+    qt_add_translation(QM_FILES ${TS_FILES})
+else()
+    qt5_add_translation(QM_FILES ${TS_FILES})
+endif()
+
+add_library(${module_name}
+    ${QM_FILES}
+)
+
+target_sources(${module_name} PRIVATE
     ../../interfaces/qlcioplugin.cpp ../../interfaces/qlcioplugin.h
-    peperoni.cpp peperoni.h
+    ${module_name}.cpp ${module_name}.h
     peperonidevice.cpp peperonidevice.h
 )
-target_include_directories(peperoni PRIVATE
+target_include_directories(${module_name} PRIVATE
     ../../interfaces
     ../common
 )
 
-target_link_libraries(peperoni PRIVATE
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Widgets
@@ -30,7 +54,7 @@ if(${LIBUSB_1_FOUND})
     )
 endif()
 
-install(TARGETS peperoni
+install(TARGETS ${module_name}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
