--- a/plugins/udmx/src/CMakeLists.txt
+++ b/plugins/udmx/src/CMakeLists.txt
@@ -1,27 +1,51 @@
 include(../../../variables.cmake)
 
-add_library(udmx)
-target_sources(udmx PRIVATE
+set(module_name "udmx")
+
+set(TS_FILES
+    uDMX_fi_FI.ts
+    uDMX_de_DE.ts
+    uDMX_es_ES.ts
+    uDMX_fr_FR.ts
+    uDMX_it_IT.ts
+    uDMX_nl_NL.ts
+    uDMX_cz_CZ.ts
+    uDMX_pt_BR.ts
+    uDMX_ca_ES.ts
+    uDMX_ja_JP.ts
+)
+
+if(QT_VERSION_MAJOR GREATER 5)
+    qt_add_translation(QM_FILES ${TS_FILES})
+else()
+    qt5_add_translation(QM_FILES ${TS_FILES})
+endif()
+
+add_library(${module_name}
+    ${QM_FILES}
+)
+
+target_sources(${module_name} PRIVATE
     ../../interfaces/qlcioplugin.cpp ../../interfaces/qlcioplugin.h
 )
 
-target_include_directories(udmx PRIVATE
+target_include_directories(${module_name} PRIVATE
     ../../interfaces
 )
 
-target_link_libraries(udmx PRIVATE
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Widgets
 )
 
 if(WIN32)
-    target_sources(udmx PRIVATE
+    target_sources(${module_name} PRIVATE
         libusb_dyn.c libusb_dyn.h
     )
 else()
-    target_sources(udmx PRIVATE
-        udmx.cpp udmx.h
+    target_sources(${module_name} PRIVATE
+        ${module_name}.cpp ${module_name}.h
         udmxdevice.cpp udmxdevice.h
     )
 endif()
@@ -38,7 +62,7 @@ if(${LIBUSB_1_FOUND})
     )
 endif()
 
-install(TARGETS udmx
+install(TARGETS ${module_name}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
