Install translate QM files.

--- a/plugins/E1.31/CMakeLists.txt
+++ b/plugins/E1.31/CMakeLists.txt
@@ -49,3 +49,5 @@ install(TARGETS ${module_name}
     FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
+
+install(FILES ${QM_FILES} DESTINATION ${INSTALLROOT}/${TRANSLATIONDIR})
