--- a/plugins/os2l/CMakeLists.txt
+++ b/plugins/os2l/CMakeLists.txt
@@ -46,3 +46,5 @@ install(TARGETS ${module_name}
     FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
+
+install(FILES ${QM_FILES} DESTINATION ${INSTALLROOT}/${TRANSLATIONDIR})
