--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -236,12 +236,12 @@ jobs:
           wget -c https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage -O ./appimagetool-x86_64.AppImage
           chmod a+x ./appimagetool-x86_64.AppImage
           ./appimagetool-x86_64.AppImage -v ${INSTALL_ROOT}
-          mv -v Q_Light_Controller_Plus-x86_64.AppImage qlcplus-{{ env.TASK }}-{{ env.APPVERSION }}-{{ env.BUILD_DATE }}-{{ env.GIT_REV }}.AppImage
+          mv -v Q_Light_Controller_Plus-x86_64.AppImage "qlcplus-${TASK}-${APPVERSION}-${BUILD_DATE}-${GIT_REV}.AppImage"
 
       - name: Test Load AppImage
         if: ${{ matrix.task == 'compile-qt5qml' }}
         run: |
-          ./qlcplus-{{ env.TASK }}-{{ env.APPVERSION }}-{{ env.BUILD_DATE }}-{{ env.GIT_REV }}.AppImage --platform offscreen --version
+          "./qlcplus-${TASK}-${APPVERSION}-${BUILD_DATE}-${GIT_REV}.AppImage" --platform offscreen --version
 
       - name: Store AppImage artifacts
         if: ${{ ! startsWith( matrix.task, 'coverage') }}
