a few steps to configure indent

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
         libxml2-utils
         xvfb
         ccache
+        indent
         wget
       PACKAGES_QML_BASE:
         libpulse-dev
