Mograte from indent to clang-format for more options and better fit.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         libxml2-utils
         xvfb
         ccache
-        indent
+        clang-format
         wget
       PACKAGES_QML_BASE:
         libpulse-dev
