--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         libxml2-utils
         xvfb
         ccache
-        clang-format
+        clang-format-14
         wget
       PACKAGES_QML_BASE:
         libpulse-dev
@@ -99,6 +99,11 @@ jobs:
           echo "TASK: ${TASK}"
           echo "QT: ${QT}"
           echo "NPROC: ${NPROC}"
+
+      - name: Register clang-format in apt
+        run: |
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+          sudo echo "deb http://apt.llvm.org/focal/ llvm-toolchain-focal main" >> /etc/apt/sources.list.d/apt.llvm.org.list
 
       - name: Download, cache and install packages
         uses: awalsh128/cache-apt-pkgs-action@latest
