--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,7 +103,7 @@ jobs:
       - name: Register clang-format apt repository
         uses: myci-actions/add-deb-repo@11
         with:
-          repo: deb http://apt.llvm.org/focal/ llvm-toolchain-focal main
+          repo: deb http://apt.llvm.org/focal/ llvm-toolchain-focal-14 main
           repo-name: apt.llvm.org
           keys-asc: https://apt.llvm.org/llvm-snapshot.gpg.key
 
