--- a/engine/test/iopluginstub/CMakeLists.txt
+++ b/engine/test/iopluginstub/CMakeLists.txt
@@ -1,6 +1,6 @@
 include(../../../variables.cmake)
 
-add_library(iopluginstub)
+add_library(iopluginstub SHARED)
 target_sources(iopluginstub PRIVATE
     ../../../plugins/interfaces/qlcioplugin.cpp ../../../plugins/interfaces/qlcioplugin.h
     iopluginstub.cpp iopluginstub.h
@@ -12,10 +12,4 @@ target_include_directories(iopluginstub PRIVATE
 target_link_libraries(iopluginstub PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
-)
-
-install(TARGETS iopluginstub
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
