make check works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,24 +60,24 @@ endif()
 if(qmlui)
     if(WIN32)
        add_custom_target(unittests
-            COMMAND unittest.bat "qmlui"
+            COMMAND unittest_cmake.bat "qmlui" ${CMAKE_CURRENT_BINARY_DIR}
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         )
     else()
        add_custom_target(unittests
-            COMMAND ./unittest.sh "qmlui"
+            COMMAND ./unittest_cmake.sh "qmlui" ${CMAKE_CURRENT_BINARY_DIR}
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         )
     endif()
 else()
     if(WIN32)
        add_custom_target(unittests
-            COMMAND unittest.bat "ui"
+            COMMAND unittest_cmake.bat "ui" ${CMAKE_CURRENT_BINARY_DIR}
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         )
     else()
        add_custom_target(unittests
-            COMMAND ./unittest.sh "ui"
+            COMMAND ./unittest_cmake.sh "ui" ${CMAKE_CURRENT_BINARY_DIR}
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         )
     endif()
