--- a/engine/test/mastertimer/CMakeLists.txt
+++ b/engine/test/mastertimer/CMakeLists.txt
@@ -1,32 +1,41 @@
-add_executable(mastertimer_test WIN32
+set(module_name "mastertimer_test")
+
+add_executable(${module_name} WIN32
     # ../../../plugins/interfaces/qlcioplugin.cpp
     ../common/resource_paths.h
     ../function/function_stub.cpp ../function/function_stub.h
     dmxsource_stub.cpp dmxsource_stub.h
-    mastertimer_test.cpp mastertimer_test.h
+    ${module_name}.cpp ${module_name}.h
 )
-target_include_directories(mastertimer_test PRIVATE
+target_include_directories(${module_name} PRIVATE
     ../../../plugins/interfaces
     ../../src
     ../function
 )
 
-target_link_libraries(mastertimer_test PRIVATE
+target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Test
     qlcplusengine
 )
 
-if(IS_TRAVIS___contains___ON)
-    target_compile_definitions(mastertimer_test PRIVATE
+if ("$ENV{TRAVIS}" STREQUAL "true")
+    target_compile_definitions(${module_name} PRIVATE
         SKIP_TEST
     )
 endif()
 
-# if(count(IS_BUILDBOT, 1))
-if(IS_BUILDBOT)
-    target_compile_definitions(mastertimer_test PRIVATE
+if(WIN32)
+    set(CURRUSR $ENV{USERNAME})
+else()
+    set(CURRUSR $ENV{USER})
+endif()
+
+string(STRIP ${CURRUSR} CURRUSR)
+string(FIND ${CURRUSR} "build" IS_BUILDBOT)
+if(IS_BUILDBOT GREATER -1)
+    target_compile_definitions(${module_name} PRIVATE
         SKIP_TEST
     )
 endif()
