--- a/engine/audio/plugins/sndfile/CMakeLists.txt
+++ b/engine/audio/plugins/sndfile/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(module_name "sndfileplugin")
 
-add_library(${module_name})
+add_library(${module_name} SHARED)
 target_sources(${module_name} PRIVATE
     ../../src/audiodecoder.cpp ../../src/audiodecoder.h
     ../../src/audioparameters.cpp ../../src/audioparameters.h
