* Removed duplicated contents in CMakefiles * Added resources in the installation

--- a/hotplugmonitor/CMakeLists.txt
+++ b/hotplugmonitor/CMakeLists.txt
@@ -1,16 +1,4 @@
-cmake_minimum_required(VERSION 3.16)
-project(hotplugmonitor VERSION 1.0 LANGUAGES C CXX)
-
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-# Set up AUTOMOC and some sensible defaults for runtime execution
-# When using Qt 6.3, you can replace the code block below with
-# qt_standard_project_setup()
-set(CMAKE_AUTOMOC ON)
-include(GNUInstallDirs)
-
-find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)
-
+project(hotplugmonitor)
 
 if(NOT ANDROID AND NOT IOS)
     add_subdirectory(src)
