--- a/plugins/gpio/CMakeLists.txt
+++ b/plugins/gpio/CMakeLists.txt
@@ -19,18 +19,8 @@ else()
     qt5_add_translation(QM_FILES ${TS_FILES})
 endif()
 
-cmake_minimum_required(VERSION 3.16)
-project(${module_name} VERSION 1.0 LANGUAGES C CXX)
+project(${module_name})
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-# Set up AUTOMOC and some sensible defaults for runtime execution
-# When using Qt 6.3, you can replace the code block below with
-# qt_standard_project_setup()
-set(CMAKE_AUTOMOC ON)
-include(GNUInstallDirs)
-
-find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui Widgets)
 
 add_library(${module_name} SHARED
