--- a/resources/colorfilters/CMakeLists.txt
+++ b/resources/colorfilters/CMakeLists.txt
@@ -1,13 +1,5 @@
-cmake_minimum_required(VERSION 3.16)
-project(colorfilters VERSION 1.0 LANGUAGES C CXX)
+project(colorfilters)
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
+file(GLOB COLOR_FILTER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.qxcf")
 
-# Set up AUTOMOC and some sensible defaults for runtime execution
-# When using Qt 6.3, you can replace the code block below with
-# qt_standard_project_setup()
-set(CMAKE_AUTOMOC ON)
-include(GNUInstallDirs)
-
-find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)
-
+install(FILES ${COLOR_FILTER_FILES} DESTINATION ${INSTALLROOT}/${COLORFILTERSDIR})
