--- a/resources/gobos/CMakeLists.txt
+++ b/resources/gobos/CMakeLists.txt
@@ -1,13 +1,5 @@
-cmake_minimum_required(VERSION 3.16)
-project(gobo VERSION 1.0 LANGUAGES C CXX)
+project(gobo)
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(GOBO_FILES Chauvet ClayPaky GLP Others Robe SGM SGM-Color)
 
-# Set up AUTOMOC and some sensible defaults for runtime execution
-# When using Qt 6.3, you can replace the code block below with
-# qt_standard_project_setup()
-set(CMAKE_AUTOMOC ON)
-include(GNUInstallDirs)
-
-find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)
-
+install(DIRECTORY ${GOBO_FILES} DESTINATION ${INSTALLROOT}/${GOBODIR})
