--- a/resources/meshes/generic/CMakeLists.txt
+++ b/resources/meshes/generic/CMakeLists.txt
@@ -1,13 +1,5 @@
-cmake_minimum_required(VERSION 3.16)
-project(generic VERSION 1.0 LANGUAGES C CXX)
+project(generic_meshes)
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(GENERIC_MESH_FILES *.obj)
 
-# Set up AUTOMOC and some sensible defaults for runtime execution
-# When using Qt 6.3, you can replace the code block below with
-# qt_standard_project_setup()
-set(CMAKE_AUTOMOC ON)
-include(GNUInstallDirs)
-
-find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)
-
+install(FILES ${GENERIC_MESH_FILES} DESTINATION ${INSTALLROOT}/${MESHESDIR}/generic)
