* Set absolute QT library path for installed exe * Fixed install errors in QLC 5

--- a/resources/meshes/generic/CMakeLists.txt
+++ b/resources/meshes/generic/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(generic_meshes)
 
-set(GENERIC_MESH_FILES *.obj)
+file(GLOB GENERIC_MESH_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.obj")
 
 install(FILES ${GENERIC_MESH_FILES} DESTINATION ${INSTALLROOT}/${MESHESDIR}/generic)
