--- a/resources/meshes/fixtures/CMakeLists.txt
+++ b/resources/meshes/fixtures/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(fixture_meshes)
 
-set(FIXTURE_MESH_FILES *.dae)
+file(GLOB FIXTURE_MESH_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.dae")
 
 install(FILES ${FIXTURE_MESH_FILES} DESTINATION ${INSTALLROOT}/${MESHESDIR}/fixtures)
